<resources>
    <string name="app_name">Zilch</string>
    <string name="zilch_title">Zilch!</string>
    <string name="zilch_subtitle">A dice game of luck and greed</string>
    <string name="single_player">Single Player</string>
    <string name="about">About</string>
    <string name="two_player">Two Players</string>
    <string name="achievements">Achievements</string>
    <string name="rules_title">Rules</string>
    <string name="scoring">Scoring</string>
</resources>
