<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/zilch_title"
            android:id="@+id/text_title"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" style="@style/zilch_title"/>
    <TextView
            android:text="@string/zilch_subtitle"
            android:id="@+id/text_subtitle" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title" style="@style/zilch_subtitle"/>
    <Button
            android:text="@string/single_player"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_play_single"
            app:layout_constraintTop_toBottomOf="@+id/text_subtitle"
            app:layout_constraintBottom_toTopOf="@+id/button_play_two" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintVertical_chainStyle="packed"
    />
    <Button
            android:text="@string/two_player"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_play_two"
            android:enabled="false"
            app:layout_constraintTop_toBottomOf="@+id/button_play_single"
            app:layout_constraintBottom_toTopOf="@+id/button_achievements"
            app:layout_constraintStart_toStartOf="@+id/button_play_single"
            app:layout_constraintEnd_toEndOf="@+id/button_play_single"
            app:layout_constraintVertical_chainStyle="packed"
    />
    <Button
            android:text="@string/achievements"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_achievements" android:enabled="false"
            app:layout_constraintTop_toBottomOf="@+id/button_play_two"
            app:layout_constraintBottom_toTopOf="@+id/button_rules"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/button_play_single"
            app:layout_constraintEnd_toEndOf="@+id/button_play_single"
    />
    <Button
            android:text="@string/rules_title"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_rules"
            app:layout_constraintTop_toBottomOf="@+id/button_achievements"
            app:layout_constraintBottom_toTopOf="@+id/button_about"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/button_achievements"
            app:layout_constraintEnd_toEndOf="@+id/button_achievements"/>
    <Button
            android:text="@string/about"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_about"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_rules"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/button_rules"
            app:layout_constraintEnd_toEndOf="@+id/button_rules"/>

</androidx.constraintlayout.widget.ConstraintLayout>